2000-11-01  Larry Smith  <lsmith@redhat.com>

        * console.itb (_build_win): Added code to remove horizontal
        scrollbar by setting -hscrollmode none, which enables the
        console widget to wrap text properly.
        * globalpref.itb (build_win): added checkbutton to enable
        wrapping text in the console window.

2000-10-31  Larry Smith  <lsmith@redhat.com>

        * targetselection.ith (run_method): Add variable for
        "Run Program" and "Continue..." buttons
        * targetselection.itb (build_win): put "Run Program" and
        "Continue From..." buttons into a frame and save them in new
        run_method variable.
        * change targetselection.itb (change_target) disables "Run
        Program" and "Continue..." buttons when the target is "exec",
        enables them for all others.

2000-10-26  Larry Smith  <lsmith@redhat.com>

        * targetselection.itb: Run Program and Continue From Last Stop
        are now radio buttons rather than checkbuttons

2000-10-26  Mo DeJong  <mdejong@redhat.com>

	* attachdlg.itb (list_pids): Use "ps axw" to get pid list
	when running under Linux. Use string match instead of
	regexp match is ps filter entry.
	* attachdlg.ith (list_pids): Change default argument to "*".

2000-10-23  Fernando Nasser  <fnasser@cygnus.com>

	* util.tcl (find_iwidgets_library): Use the directories that were
	actually searched in the error message.

2000-10-13  Fernando Nasser  <fnasser@cygnus.com>

	With Steven Johnson <sbjohnson@ozemail.com.au>
	This change fixes part of the possible scenarios where a race condition
	would cause core dumps if there were commands changing registers or
	other target resources in a startup script.
	The remaining scenarios are fixed by a patch to generic/gdbtk-hooks.c
	* interface.tcl (gdbtk_update_safe): New function. Like gdbtk_update
	but does nothing if target is running.
	(gdbtk_register_changed): Call the above safe version.
	(gdbtk_memory_changed): Likewise.
